# dp-gmm-tabular-synthesis

./: .gitignore  README.md  k56.gmm.pkl  pyproject.toml
src/: gmm.py  gmm_cpu.py  gmm_gpu.py  utils.py
