[project]
name = "gmm-synth-transfer"
version = "0.1.0"
description = "cooking something"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cupy-cuda11x>=13.6.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "scikit-learn>=1.7.2",
    "sdv>=1.28.0",
    "seaborn>=0.13.2",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
    "xgboost==2.1.3",
]
